# minidreamer

./: .gitignore  README.md  pyproject.toml  results.md
configs/: fourrooms_ppo.yaml  fourrooms_world_model.yaml
docs/: spec_clarifications.md
notebooks/: results_analysis.ipynb  rollout_debug.ipynb
scripts/: collect_random.sh  eval_planner.sh  generate_results_plots.py  train_ppo.sh  train_world_model.sh
src/: evaluate.py  train_world_model.py
src/minidreamer/: __init__.py  config.py  evaluation.py  serialization.py
src/minidreamer/baselines/: __init__.py  train_ppo.py
src/minidreamer/envs/: make_env.py
src/minidreamer/models/: __init__.py  decoder.py  encoder.py  heads.py  rssm.py  world_model.py
src/minidreamer/planning/: cem.py  evaluate_planner.py
src/minidreamer/utils/: __init__.py  common.py
tests/: test_cem_planner.py  test_env.py  test_replay_buffer.py  test_rssm_shapes.py
